Fixed alignment.

--- a/public/style.css
+++ b/public/style.css
@@ -165,7 +165,7 @@ input + input {
 }
 
 .review {
-	margin-right: 900px;
+	margin-right: 500px;
 }
 
 #map {
@@ -189,7 +189,7 @@ a {
 }
 
 .review_edit {
-	margin-right: 1000px;
+	margin-right: 620px;
 }
 
 
